--- a/assets/style.css
+++ b/assets/style.css
@@ -16,9 +16,29 @@
     flex-wrap: wrap;
     justify-content: space-around;
   }
+
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .card {
+    border: 2px solid var(--main-color);
+    border-radius: 1em;
+    max-width: 750px;
+  }
+
+  .card img {
+    width: 450px;
+    height: 350px;
+    object-fit: cover;
+    cursor: pointer;
+    padding: 20px;
+  }
   
   .recipe-card {
-    border: 3px solid var(--main-color);
+    border: 2px solid var(--main-color);
     border-radius: 1em;
     max-width: 350px;
   }
@@ -28,6 +48,7 @@
     height: 250px;
     object-fit: cover;
     cursor: pointer;
+    border-radius: 1em;
   }
   
   .recipe-card .title {
@@ -83,7 +104,4 @@
     cursor: pointer;
   }
   
-  .number-of-listings {
-    cursor: pointer;
-    text-decoration: underline;
-  }
+  
