--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --bg-color: white;
     --main-color: black;
-    --main-color-transparent: grey(255, 166, 0, 0.459);
+    --main-color-transparent: grey(255, 166, 0, 0.2);
     --header-font-family: "Times New Roman";
   }
   
@@ -9,6 +9,10 @@
     background-color: var(--bg-color);
     color: var(--main-color);
     text-align: center;
+    margin-top: 25px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
   }
   
   #recipe-container {
@@ -41,6 +45,10 @@
     border: 2px solid var(--main-color);
     border-radius: 1em;
     max-width: 350px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 2px;
+    margin-left: 2px;
   }
   
   .recipe-card img {
@@ -75,17 +83,21 @@
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: var(--main-color-transparent); /* Fallback color */
+    background-color: white; /* Fallback color */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
   }
   
   /* Modal Content/Box */
   .modal-content {
-    background-color: grey;
+    background-color: white;
+    opacity: .9;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid grey;
     border-radius: 1em;
-    width: 80%; /* Could be more or less, depending on screen size */
+    height: 500px;
+    width: 500px; /* Could be more or less, depending on screen size */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   }
 
   
