--- a/assets/style.css
+++ b/assets/style.css
@@ -9,10 +9,18 @@
     background-color: var(--bg-color);
     color: var(--main-color);
     text-align: center;
-    margin-top: 25px;
     margin-bottom: 100px;
-    margin-right: 150px;
-    margin-left: 80px;
+  }
+
+  .hero-image {
+    background-image: url("sweettooth.png");
+    width: 100%;
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    margin-bottom: 50px;
   }
   
   #recipe-container {
@@ -68,7 +76,7 @@
   }
   
   .show > img {
-    width: 100%;
+    width: 50%;
     height: 40vh;
     object-fit: cover;
   }
