--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,19 @@
 :root {
     --bg-color: white;
-    --main-color: black;
+    --main-color: rgb(80, 80, 80);
     --main-color-transparent: grey(255, 166, 0, 0.2);
     --header-font-family: "Times New Roman";
   }
   
   body {
-    background-color: var(--bg-color);
+    background-color: #FFDEE9; /* For browsers that do not support gradients */
+    background-image: linear-gradient(180deg, #B5FFFC, #FFDEE9);
     color: var(--main-color);
     text-align: center;
     margin-bottom: 100px;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .hero-image {
@@ -17,6 +21,7 @@
     width: 100%;
     height: 50%;
     background-position: center;
+    border-radius: 5px;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -36,9 +41,11 @@
   }
 
   .card {
+    text-align: left;
     border: 2px solid var(--main-color);
     border-radius: 1em;
     max-width: 750px;
+    padding: 50px;
   }
 
   .card img {
